--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<div><p class="selector">Paragraph 1</p> </div>
+<p>Paragraph 2</p>
+<div><p class="selector">paragraph 3</p></div>
+<p>paragraph 4</p>
 </body>
 
 </html>
